# automate_dirstat

./: .gitignore  README.md  flatten.py  main.py  pyproject.toml
Objects/: objects.py
Utilities/: plotting.py  reporting.py  utilities.py
tests/: conftest.py  test_function.py  test_helpers.py  test_local.py  test_utilities.py
